--- a/pages/_layouts/default.html
+++ b/pages/_layouts/default.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <title>
         {% if page.title %} {{ page.title }} {% else %} {{ site.title }} {% endif %}
     </title>
     <style type="text/css">
     body { 
+        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
         margin:40px auto;
         max-width:650px;
         line-height:1.6;
