--- a/pages/_layouts/default.html
+++ b/pages/_layouts/default.html
@@ -23,6 +23,15 @@
     h1, h2, h3 {
         line-height:1.2
         }
+
+        td {
+            padding: 0.5em
+        }
+
+        td:nth-child(1) {  
+            font-weight: bold;
+            text-align: right;
+        }
     </style>
 </head>
 
