--- a/pages/_layouts/default.html
+++ b/pages/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
     <title>
         {% if page.title %} {{ page.title }} {% else %} {{ site.title }} {% endif %}
     </title>
@@ -20,8 +20,8 @@
         padding:0 10px
         }
         
-    h1, h2, h3 {
-        line-height:1.2
+        h1, h2, h3 {
+            line-height:1.2
         }
 
         td {
