Specify gem versions

--- a/pages/_layouts/default.html
+++ b/pages/_layouts/default.html
@@ -24,8 +24,13 @@
             line-height:1.2
         }
 
+        table, ul.simulators {
+            font-size: 12pt;
+        }
+
         td {
-            padding: 0.5em
+            padding-left: 0.5em;
+            vertical-align: top;
         }
 
         td:nth-child(1) {  
