--- a/pages/_layouts/default.html
+++ b/pages/_layouts/default.html
@@ -23,7 +23,7 @@
         h1,
         h2,
         h3 {
-            line-height: 1.2
+            line-height: 1.2;
         }
 
         table,
@@ -32,8 +32,8 @@
         }
 
         th {
+            text-align: left;
             font-size: 1.5em;
-            line-height: 2em;
         }
 
         td {
@@ -45,6 +45,11 @@
             font-weight: bold;
             text-align: right;
         }
+
+        .underline {
+           border-bottom: 2px solid #444;
+        }
+
     </style>
 </head>
 
